# hovedopgave

./: README.md
01-design-sprint-prototype/01-rpc-api/: TestData.cs  prototype1.sln
01-design-sprint-prototype/02-cpp-pytest-testprojekt/: Makefile
02-cpp-testprojekt/: Makefile
02-cpp-testprojekt/src/: main.cpp  testfuncs.cpp  testfuncs.h
03-cpp-framework-tests/01-catch2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  catch2-test.sln  catch2-test.vcxproj  catch2-test.vcxproj.filters  cmake_install.cmake  main.cpp
03-cpp-framework-tests/01-catch2/src/: main.cpp  testfuncs.cpp  testfuncs.h
03-cpp-framework-tests/02-doctest/: Makefile
03-cpp-framework-tests/03-gtest-boost-native/: boost.cpp  googletests-test1.vcxproj  googletests-test1.vcxproj.filters  test-tests.sln  testee.cpp  testfuncs.cpp  testfuncs.h
04-3phpm-snippets/01-init-unittests/: apcs5480.cpp  fakeit.hpp  fff.h  unit.vcxproj
04-3phpm-snippets/02-pytest-config/: pytest.ini
04-3phpm-snippets/03-pytest-integration/: constants.py  test_integration.py
04-3phpm-snippets/04-pytest-system/: test_functional.py
06-tc-snippets/: steps.kt
(+59 files in other folders)
